syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Vector.proto";


message AvatarDieAnimationEndReq {
	uint64 die_guid = 10;
	uint32 skill_id = 4;
	Vector reborn_pos = 3;
}