syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarDieAnimationEndRsp {
	uint64 die_guid = 6;
	int32 retcode = 2;
	uint32 skill_id = 14;
}