syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AvatarTeam.proto";


message AvatarTeamUpdateNotify {
	repeated uint64 temp_avatar_guid_list = 8;
	map<uint32, AvatarTeam> avatar_team_map = 5;
}