syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Vector.proto";


message ChangeAvatarReq {
	uint64 guid = 12;
	bool is_move = 10;
	uint32 skill_id = 1;
	Vector move_pos = 2;
}