syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message ChangeAvatarRsp {
	uint64 cur_guid = 13;
	int32 retcode = 7;
	uint32 skill_id = 3;
}