syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message SetUpAvatarTeamReq {
	uint64 cur_avatar_guid = 5;
	uint32 team_id = 8;
	repeated uint64 avatar_team_guid_list = 10;
}